Peque;os cambios en programas antiguos